    * Issue #76: Circular genome fixes with Bio::Location::Split [fjossandon]
    * Issue #80: Fix lack of caching issue with Bio::DB::Taxonomy [fjossandon]
    * Issue #81: Small updates to make sure possible memory leaks are detected [cjfields]
    * Issue #84: EMBL format wrapping problem [nyamned]
    * Issue #90: Missing entries for translation tables 24 and 25 [fjossandon]
    * Fix various Bio::Tools::Analysis remote server config problems [cjfields]
    * Added several missing 'Data::Stag' and 'LWP::UserAgent' requirements [fjossandon]
    * Added a workaround in Bio::DB::Registry to get Username in Windows [fjossandon]
    * For HMMer report parsing, changed "$hsp->bits" to return 0 instead of undef
      to be consistent with "$hit->bits" behaviour [fjossandon]
    * Fixed a bug in HMMer3 parsing, where an homology line ending in CS or RF
      aminoacids made "next_seq" confused and broke the parser [fjossandon]
    * Adjusted FTLocationFactory.pm to comply with current GenBank Feature Table
      Definition, so now "join(complement(C..D),complement(A..B))" is equivalent
      to "complement(join(A..B,C..D))" [fjossandon]

1.6.924

    [Significant changes]

    * Bug/feature issue tracking has moved to GitHub Issues:
          https://github.com/bioperl/bioperl-live/issues
    * DB_File has been demoted from "required" to "recommended",
      which should make easier for Windows users to install BioPerl
      if they don't need that module.

    [New features]

    * Bio::Search::HSP::GenericHSP
        - Bug #3370, added a "posterior_string" method to retrieve the
          posterior probability lines (PP) from HMMER3 reports [fjossandon]
        - Added a "consensus_string" method to retrieve the consensus
          structure lines (CS|RF) from HMMER2 and HMMER3 reports when available [fjossandon]
    * Bio::SearchIO::hmmer2
        - The number of identical and conserved residues are now calculated